# hands-free-phone

./: .gitignore  LICENSE  README.md  article.md  hands_free_telephone.service  pyproject.toml  requirements.txt
docs/: Gemfile  _config.yml  index.md
hands_free_telephone/: audio_intensity.py  hands_free_telephone  hands_free_telephone.py  hands_free_telephone_setup.py
hands_free_telephone/coqui/: create_grammar.py  create_input.py  kenlm.scorer
hands_free_telephone/coqui/data/: corpus.txt  keywords.txt  names.txt  numbers.txt  phonenumbers.txt
speech_recognition/: README.md  rasa_command_handler.py  speech_recognition.py
speech_recognition/tests/: test_speech_recognition.py
